[gd_scene load_steps=10 format=2]

[ext_resource path="res://Inventory/InventoryScreen.gd" type="Script" id=1]
[ext_resource path="res://Inventory/Inventory.gd" type="Script" id=2]
[ext_resource path="res://Inventory/UIInputHandler.gd" type="Script" id=3]
[ext_resource path="res://Inventory/environment_forest_evening.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Buttons/inventory icon.jpg" type="Texture" id=5]

[sub_resource type="Theme" id=1]

[sub_resource type="Theme" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Theme" id=4]

[node name="InventoryScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="environment_forest_evening" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 741.342, 468.402 )
scale = Vector2( 1.4633, 1.25486 )
texture = ExtResource( 4 )

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 2 )

[node name="UIInputHandler" type="Node" parent="."]
script = ExtResource( 3 )

[node name="BackgroundContainer" type="Control" parent="."]
theme = SubResource( 1 )

[node name="Panel" type="Panel" parent="BackgroundContainer"]
margin_left = -18.9739
margin_top = 1.99725
margin_right = 1475.06
margin_bottom = 949.997
theme = SubResource( 2 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="BackgroundContainer"]
margin_left = 627.387
margin_top = 17.3544
margin_right = 744.387
margin_bottom = 47.3544
rect_scale = Vector2( 2, 2 )
text = "Inventory"

[node name="ItemStats" type="RichTextLabel" parent="BackgroundContainer"]
margin_left = 560.0
margin_top = 670.0
margin_right = 720.0
margin_bottom = 770.0
rect_scale = Vector2( 2, 2 )

[node name="SlotsContainer" type="Control" parent="."]

[node name="Slot1Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 336.0
margin_top = 112.0
margin_right = 416.0
margin_bottom = 192.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
theme = SubResource( 4 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 512.0
margin_top = 112.0
margin_right = 592.0
margin_bottom = 192.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot3Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 688.0
margin_top = 112.0
margin_right = 768.0
margin_bottom = 192.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot4Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 864.0
margin_top = 112.0
margin_right = 944.0
margin_bottom = 192.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot5Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 1040.0
margin_top = 112.0
margin_right = 1120.0
margin_bottom = 192.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot6Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 160.0
margin_top = 296.0
margin_right = 240.0
margin_bottom = 376.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot7Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 512.0
margin_top = 296.0
margin_right = 592.0
margin_bottom = 376.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot8Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 336.0
margin_top = 296.0
margin_right = 416.0
margin_bottom = 376.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot9Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 864.0
margin_top = 296.0
margin_right = 944.0
margin_bottom = 376.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot10Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 1040.0
margin_top = 296.0
margin_right = 1120.0
margin_bottom = 376.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot11Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 160.0
margin_top = 472.0
margin_right = 240.0
margin_bottom = 552.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot12Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 512.0
margin_top = 472.0
margin_right = 592.0
margin_bottom = 552.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot13Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 688.0
margin_top = 296.0
margin_right = 768.0
margin_bottom = 376.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot14Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 160.0
margin_top = 112.0
margin_right = 240.0
margin_bottom = 192.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot16Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 160.0
margin_top = 656.0
margin_right = 240.0
margin_bottom = 736.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot17Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 336.0
margin_top = 472.0
margin_right = 416.0
margin_bottom = 552.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot18Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 688.0
margin_top = 472.0
margin_right = 768.0
margin_bottom = 552.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot19Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 864.0
margin_top = 472.0
margin_right = 944.0
margin_bottom = 552.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot20Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 1040.0
margin_top = 472.0
margin_right = 1120.0
margin_bottom = 552.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot21Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 336.0
margin_top = 656.0
margin_right = 416.0
margin_bottom = 736.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot22Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 512.0
margin_top = 656.0
margin_right = 592.0
margin_bottom = 736.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot23Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 688.0
margin_top = 656.0
margin_right = 768.0
margin_bottom = 736.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )

[node name="Slot24Button" type="TextureButton" parent="SlotsContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 864.0
margin_top = 656.0
margin_right = 944.0
margin_bottom = 736.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Slot25Button" type="TextureButton" parent="SlotsContainer"]
margin_left = 1040.0
margin_top = 656.0
margin_right = 1120.0
margin_bottom = 736.0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 20, 20 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="."]
margin_left = 1252.0
margin_top = 840.0
margin_right = 1333.0
margin_bottom = 860.0
rect_scale = Vector2( 2, 2 )
text = "Close"
[connection signal="mouse_entered" from="SlotsContainer/Slot1Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 0 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot1Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot1Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 0 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot2Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 1 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot2Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot2Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 1 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot3Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 2 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot3Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot3Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 2 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot4Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 3 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot4Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot4Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 3 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot5Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 4 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot5Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot5Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 4 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot6Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 5 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot6Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot6Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 5 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot7Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 6 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot7Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot7Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 6 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot8Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 7 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot8Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot8Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 7 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot9Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 8 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot9Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot9Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 8 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot10Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 9 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot10Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot10Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 9 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot11Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 10 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot11Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot11Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 10 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot12Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 11 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot12Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot12Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 11 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot13Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 12 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot13Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot13Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 12 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot14Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 13 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot14Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot14Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 13 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot16Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 15 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot16Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot16Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 15 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot17Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 16 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot17Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot17Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 16 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot18Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 17 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot18Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot18Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 17 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot19Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 18 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot19Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot19Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 18 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot20Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 19 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot20Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot20Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 19 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot21Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 20 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot21Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot21Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 20 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot22Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 21 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot22Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot22Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 21 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot23Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 22 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot23Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot23Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 22 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot24Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 23 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot24Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot24Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 23 ]]
[connection signal="mouse_entered" from="SlotsContainer/Slot25Button" to="UIInputHandler" method="_on_SlotButton_mouse_entered" binds= [ 24 ]]
[connection signal="mouse_exited" from="SlotsContainer/Slot25Button" to="UIInputHandler" method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="SlotsContainer/Slot25Button" to="UIInputHandler" method="_on_SlotButton_pressed" binds= [ 24 ]]
